--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,51 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.input-error {
+  border: 1px solid red;
+}
+input{
+  font-size: 1rem;
+  line-height: 2rem;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.mandatory-field {
+  color: red;
+}
+
+.m-3{
+  margin-right:10px ;
+}
+.mb-5{
+  margin-bottom: 10px;
+}
+.form-container{
+  width: 500px;
+  margin: 50px auto;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+  border: 5px solid white;
+  border-radius: 15px;
+  box-shadow: 0px 0px 15px black;
+}
+
+.btn{
+  padding: 5px 20px;
+  background: none;
+  border: none;
+  background-color: rgb(33, 97, 192);
+  color: white;
+  font-size: 1rem;
+  border-radius: 10px;
+  line-height: 2rem;
+}
+.btn:hover{
+  background-color:  rgb(60, 124, 220);
+}
