Some Changes in Css

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  padding: 10px;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -36,7 +38,8 @@ input{
   margin-bottom: 10px;
 }
 .form-container{
-  width: 500px;
+  max-width: 600px;
+  min-width: 380px;
   margin: 50px auto;
  display: flex;
  flex-direction: column;
